// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="sc-ehRLEV fAClhv"
>
  <div
    className="sc-cEGhCc ivEDnE"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="sc-ehRLEV fAClhv"
>
  <div
    className="sc-cEGhCc ivEDnE"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-cEGhCc jwfJqI"
    color="dodoria.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-cEGhCc kSwkWY"
    color="trunks.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-cEGhCc gAlIYk"
    color="raditz.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="sc-ehRLEV fAClhv"
>
  <div
    className="sc-cEGhCc bSdiTF"
    size="twoxsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-cEGhCc iHGGVx"
    size="xsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-cEGhCc khFqjp"
    size="small"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-cEGhCc ivEDnE"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-cEGhCc kevNBM"
    size="large"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;
